Add documentation task, change infromation of other endpoints
